attached_assets/Pasted--In-file-included-from-usr-local-include-python3-13-lon_1764935706688.txt
 In file included from /usr/local/include/python3.13/longobject.h:107,

                       from /usr/local/include/python3.13/Python.h:82,

                       from pandas/_libs/tslibs/base.cpython-313-x86_64-linux-gnu.so.p/pandas/_libs/tslibs/base.pyx.c:6:

      /usr/local/include/python3.13/cpython/longobject.h:111:17: note: declared here

        111 | PyAPI_FUNC(int) _PyLong_AsByteArray(PyLongObject* v,

            |                 ^~~~~~~~~~~~~~~~~~~

      pandas/_libs/tslibs/base.cpython-313-x86_64-linux-gnu.so.p/pandas/_libs/tslibs/base.pyx.c: In function ‘__Pyx_PyInt_As_int’:

      pandas/_libs/tslibs/base.cpython-313-x86_64-linux-gnu.so.p/pandas/_libs/tslibs/base.pyx.c:5631:27: error: too few arguments to function ‘_PyLong_AsByteArray’

       5631 |                 int ret = _PyLong_AsByteArray((PyLongObject *)v,

            |                           ^~~~~~~~~~~~~~~~~~~

      /usr/local/include/python3.13/cpython/longobject.h:111:17: note: declared here

        111 | PyAPI_FUNC(int) _PyLong_AsByteArray(PyLongObject* v,

            |                 ^~~~~~~~~~~~~~~~~~~

      [35/151] Compiling C object pandas/_libs/tslibs/ccalendar.cpython-313-x86_64-linux-gnu.so.p/meson-generated_pandas__libs_tslibs_ccalendar.pyx.c.o

      FAILED: [code=1] pandas/_libs/tslibs/ccalendar.cpython-313-x86_64-linux-gnu.so.p/meson-generated_pandas__libs_tslibs_ccalendar.pyx.c.o

      cc -Ipandas/_libs/tslibs/ccalendar.cpython-313-x86_64-linux-gnu.so.p -Ipandas/_libs/tslibs -I../../pandas/_libs/tslibs -I../../../../pip-build-env-do__7qvc/overlay/lib/python3.13/site-packages/numpy/core/include -I../../pandas/_libs/include -I/usr/local/include/python3.13 -fvisibility=hidden -fdiagnostics-color=always -DNDEBUG -D_FILE_OFFSET_BITS=64 -w -std=c99 -O3 -DNPY_NO_DEPRECATED_API=0 -DNPY_TARGET_VERSION=NPY_1_21_API_VERSION -fPIC -MD -MQ pandas/_libs/tslibs/ccalendar.cpython-313-x86_64-linux-gnu.so.p/meson-generated_pandas__libs_tslibs_ccalendar.pyx.c.o -MF pandas/_libs/tslibs/ccalendar.cpython-313-x86_64-linux-gnu.so.p/meson-generated_pandas__libs_tslibs_ccalendar.pyx.c.o.d -o pandas/_libs/tslibs/ccalendar.cpython-313-x86_64-linux-gnu.so.p/meson-generated_pandas__libs_tslibs_ccalendar.pyx.c.o -c pandas/_libs/tslibs/ccalendar.cpython-313-x86_64-linux-gnu.so.p/pandas/_libs/tslibs/ccalendar.pyx.c

      pandas/_libs/tslibs/ccalendar.cpython-313-x86_64-linux-gnu.so.p/pandas/_libs/tslibs/ccalendar.pyx.c: In function ‘__Pyx_PyInt_As_int’:

      pandas/_libs/tslibs/ccalendar.cpython-313-x86_64-linux-gnu.so.p/pandas/_libs/tslibs/ccalendar.pyx.c:7376:27: error: too few arguments to function ‘_PyLong_AsByteArray’

       7376 |                 int ret = _PyLong_AsByteArray((PyLongObject *)v,

            |                           ^~~~~~~~~~~~~~~~~~~

      In file included from /usr/local/include/python3.13/longobject.h:107,

                       from /usr/local/include/python3.13/Python.h:82,

                       from pandas/_libs/tslibs/ccalendar.cpython-313-x86_64-linux-gnu.so.p/pandas/_libs/tslibs/ccalendar.pyx.c:6:

      /usr/local/include/python3.13/cpython/longobject.h:111:17: note: declared here

        111 | PyAPI_FUNC(int) _PyLong_AsByteArray(PyLongObject* v,

            |                 ^~~~~~~~~~~~~~~~~~~

      pandas/_libs/tslibs/ccalendar.cpython-313-x86_64-linux-gnu.so.p/pandas/_libs/tslibs/ccalendar.pyx.c: In function ‘__Pyx_PyInt_As_long’:

      pandas/_libs/tslibs/ccalendar.cpython-313-x86_64-linux-gnu.so.p/pandas/_libs/tslibs/ccalendar.pyx.c:7686:27: error: too few arguments to function ‘_PyLong_AsByteArray’

       7686 |                 int ret = _PyLong_AsByteArray((PyLongObject *)v,

            |                           ^~~~~~~~~~~~~~~~~~~

      /usr/local/include/python3.13/cpython/longobject.h:111:17: note: declared here

        111 | PyAPI_FUNC(int) _PyLong_AsByteArray(PyLongObject* v,

            |                 ^~~~~~~~~~~~~~~~~~~

      [36/151] Compiling Cython source /tmp/pip-install-y3d9ss_u/pandas_0f266250895540a3aa7cc9eae22ca6c0/pandas/_libs/ops.pyx

      [37/151] Compiling Cython source /tmp/pip-install-y3d9ss_u/pandas_0f266250895540a3aa7cc9eae22ca6c0/pandas/_libs/index.pyx

      [38/151] Compiling Cython source /tmp/pip-install-y3d9ss_u/pandas_0f266250895540a3aa7cc9eae22ca6c0/pandas/_libs/sas.pyx

      [39/151] Compiling Cython source /tmp/pip-install-y3d9ss_u/pandas_0f266250895540a3aa7cc9eae22ca6c0/pandas/_libs/tslib.pyx

      [40/151] Compiling Cython source /tmp/pip-install-y3d9ss_u/pandas_0f266250895540a3aa7cc9eae22ca6c0/pandas/_libs/reshape.pyx

      [41/151] Compiling Cython source /tmp/pip-install-y3d9ss_u/pandas_0f266250895540a3aa7cc9eae22ca6c0/pandas/_libs/parsers.pyx

      [42/151] Compiling Cython source /tmp/pip-install-y3d9ss_u/pandas_0f266250895540a3aa7cc9eae22ca6c0/pandas/_libs/lib.pyx

      [43/151] Compiling Cython source /tmp/pip-install-y3d9ss_u/pandas_0f266250895540a3aa7cc9eae22ca6c0/pandas/_libs/window/indexers.pyx

      [44/151] Compiling Cython source /tmp/pip-install-y3d9ss_u/pandas_0f266250895540a3aa7cc9eae22ca6c0/pandas/_libs/writers.pyx

      [45/151] Compiling Cython source /tmp/pip-install-y3d9ss_u/pandas_0f266250895540a3aa7cc9eae22ca6c0/pandas/_libs/window/aggregations.pyx

      [46/151] Compiling Cython source /tmp/pip-install-y3d9ss_u/pandas_0f266250895540a3aa7cc9eae22ca6c0/pandas/_libs/interval.pyx

      [47/151] Compiling Cython source /tmp/pip-install-y3d9ss_u/pandas_0f266250895540a3aa7cc9eae22ca6c0/pandas/_libs/sparse.pyx

      [48/151] Compiling Cython source /tmp/pip-install-y3d9ss_u/pandas_0f266250895540a3aa7cc9eae22ca6c0/pandas/_libs/hashtable.pyx

      [49/151] Compiling Cython source /tmp/pip-install-y3d9ss_u/pandas_0f266250895540a3aa7cc9eae22ca6c0/pandas/_libs/algos.pyx

      [50/151] Compiling Cython source /tmp/pip-install-y3d9ss_u/pandas_0f266250895540a3aa7cc9eae22ca6c0/pandas/_libs/groupby.pyx

      [51/151] Compiling Cython source /tmp/pip-install-y3d9ss_u/pandas_0f266250895540a3aa7cc9eae22ca6c0/pandas/_libs/join.pyx

      ninja: build stopped: subcommand failed.

      [end of output]

  

  note: This error originates from a subprocess, and is likely not a problem with pip.

error: metadata-generation-failed


× Encountered error while generating package metadata.

╰─> See above for output.


note: This is an issue with the package mentioned above, not pip.

hint: See above for details.


[notice] A new release of pip is available: 24.0 -> 25.3

[notice] To update, run: pip install --upgrade pip

Checking if Streamlit is installed

Installing rich for an improved exception logging

Using standard pip install.

Collecting rich>=10.14.0

  Downloading rich-14.2.0-py3-none-any.whl.metadata (18 kB)

Collecting markdown-it-py>=2.2.0 (from rich>=10.14.0)

  Downloading markdown_it_py-4.0.0-py3-none-any.whl.metadata (7.3 kB)

Collecting pygments<3.0.0,>=2.13.0 (from rich>=10.14.0)

  Downloading pygments-2.19.2-py3-none-any.whl.metadata (2.5 kB)

Collecting mdurl~=0.1 (from markdown-it-py>=2.2.0->rich>=10.14.0)

  Downloading mdurl-0.1.2-py3-none-any.whl.metadata (1.6 kB)

Downloading rich-14.2.0-py3-none-any.whl (243 kB)

   ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 243.4/243.4 kB 14.0 MB/s eta 0:00:00[2025-12-05 11:53:50.404848] 

Downloading markdown_it_py-4.0.0-py3-none-any.whl (87 kB)

   ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 87.3/87.3 kB 175.4 MB/s eta 0:00:00[2025-12-05 11:53:50.417563] 

Downloading pygments-2.19.2-py3-none-any.whl (1.2 MB)

   ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 1.2/1.2 MB 76.7 MB/s eta 0:00:00[2025-12-05 11:53:50.445943] 

Downloading mdurl-0.1.2-py3-none-any.whl (10.0 kB)

Installing collected packages: pygments, mdurl, markdown-it-py, rich

  Attempting uninstall: pygments

    Found existing installation: Pygments 2.19.2

    Uninstalling Pygments-2.19.2:

      Successfully uninstalled Pygments-2.19.2

  Attempting uninstall: mdurl

    Found existing installation: mdurl 0.1.2

    Uninstalling mdurl-0.1.2:

      Successfully uninstalled mdurl-0.1.2

  Attempting uninstall: markdown-it-py

    Found existing installation: markdown-it-py 4.0.0

    Uninstalling markdown-it-py-4.0.0:

      Successfully uninstalled markdown-it-py-4.0.0

  Attempting uninstall: rich

    Found existing installation: rich 14.2.0

    Uninstalling rich-14.2.0:

      Successfully uninstalled rich-14.2.0

Successfully installed markdown-it-py-4.0.0 mdurl-0.1.2 pygments-2.19.2 rich-14.2.0


[notice] A new release of pip is available: 24.0 -> 25.3

[notice] To update, run: pip install --upgrade pip


────────────────────────────────────────────────────────────────────────────────────────


[11:53:52] ❗️ installer returned a non-zero exit code

[11:53:52] ❗️ Error during processing dependencies! Please fix the error and push an update, or try restarting the app.